--- a/.release-it.json
+++ b/.release-it.json
@@ -1,5 +1,9 @@
 {
+  "git": {
+    "changelog": "npx auto-changelog --stdout --commit-limit false -u --template https://raw.githubusercontent.com/release-it/release-it/master/templates/changelog-compact.hbs"
+  },
   "npm": {
     "publish": false
-  }
+  },
+  "preRelease": "rc"
 }
