chore: config release

--- a/.release-it.json
+++ b/.release-it.json
@@ -2,8 +2,16 @@
   "git": {
     "changelog": "npx auto-changelog --stdout --commit-limit false -u --template https://raw.githubusercontent.com/release-it/release-it/master/templates/changelog-compact.hbs"
   },
+  "hooks": {
+    "after:bump": "echo 更新版本成功"
+  },
   "npm": {
     "publish": false
   },
-  "preRelease": "rc"
+  "plugins": {
+    "@release-it/conventional-changelog": {
+      "preset": "angular",
+      "infile": "CHANGELOG.md"
+    }
+  }
 }
