--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "release-it-demo",
-  "version": "1.0.3-rc.0",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
